<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Concurseiro</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm">Confirmar</string>
    <string name="error">Erro</string>
    <string name="warning">Aviso</string>
    
    <string name="RecordStudy_StudyLabel">O que você estudou hoje?</string> <!-- What subject did you studied today? -->
    <string name="RecordStudy_ConfirmButton">Avançar</string>
    <string name="RecordStudy_AddStudy">+</string>
    <string name="RecordStudy_NewStudyDialogTitle">Nova Matéria</string>
    <string name="RecordStudy_NewStudyDialogMessage">Nome</string>
    <string name="RecordStudy_NoStudies">Você deve inserir ao menos uma matéria.</string>
    
    <string name="TopicSelection_Title">Assunto</string>
    <string name="TopicSelection_NewTopicButton">Outro Assunto</string>
    <string name="TopicSelection_ConfirmButton">Próximo</string>
    <string name="TopicSelection_ReturnButton">Voltar</string>
    <string name="TopicSelection_DialogTitle">Assunto</string>
    <string name="TopicSelection_DialogMessage">Qual assunto você estudou?</string>
    
    <string name="Study_TimeLabel">Horas</string>
    <string name="Study_ButtonRemove">X</string>
    
    <string name="Subject_NoSubject">Escolha uma matéria</string>
    <string name="Subject_NewSubject">(Nova Matéria)</string>

</resources>
