<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/text_large"
	        android:text="@string/TopicSelection_Title"
	        android:layout_centerHorizontal="true"/>
        
    </RelativeLayout>
    
    <ListView
        android:id="@+id/TopicSelection_TopicList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    
    <Button
        android:id="@+id/TopicSelection_NewTopicButton"
        android:text="@string/TopicSelection_NewTopicButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
    
	    <Button
	        android:id="@+id/TopicSelection_ReturnButton"
	        android:text="@string/TopicSelection_ReturnButton"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" />
    
	    <Button
	        android:id="@+id/TopicSelection_ConfirmButton"
	        android:text="@string/TopicSelection_ConfirmButton"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" />
    
    </LinearLayout>
    
</LinearLayout>
