<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="raele.concurseiro.activity.RecordStudyActivity" >

        <TextView
            android:id="@+id/RecordStudy_StudyLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RecordStudy_StudyLabel" />

        <ListView
            android:id="@+id/RecordStudy_StudyList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/RecordStudy_AddStudy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RecordStudy_AddStudy" />

        <Button
            android:id="@+id/RecordStudy_ConfirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RecordStudy_ConfirmButton" />

</LinearLayout>